--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
                 <!--PRIMARY MENU-->
                 <div class="collapse navbar-collapse" id="ham-menu">
                    <ul class="navbar-nav ml-auto">
-                       <li class="nav-item"><a class="nav-link" href="">Home</a> </li>
-                       <li class="nav-item"><a class="nav-link" href="">About us</a></li>
-                       <li class="nav-item"><a class="nav-link" href="">Rules</a></li>
-                       <li class="nav-item"><a class="nav-link" href="">Info</a></li>
-                       <li class="nav-item"><a class="nav-link" href="">Contact Us</a></li>
+                       <li class="nav-item"><a class="nav-link" href="#">Home</a> </li>
+                       <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
+                       <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
+                       <li class="nav-item"><a class="nav-link" href="#pricing">Pricing</a></li>
+                       <li class="nav-item"><a class="nav-link" href="#cta">Downloads</a></li>
+                       <li class="nav-item"><a class="nav-link" href="#footer">Countact Us</a></li>
         
                    </ul>
                 </div>         
@@ -218,10 +219,12 @@
     <!-- Footer -->
   
     <footer id="footer">
+      <h2 style="color: gray; padding-top:10px ;">Contact Us</h2>
       <i class="icon fab fa-facebook"></i>
       <i class="icon fab fa-twitter"></i>
       <i class="icon fab fa-instagram"></i>
       <i class="icon fas fa-envelope"></i>
+      
       <p>© Copyright 2021 ASHWIN</p>
   
     </footer>
